# Astera

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Graph.json  PRODUCT.md  README.md  SECURITY.md  STATUS.md  install.sh  vcpkg.json
.agents/plans/: 00-architecture.md  01-data-model.md  02-analysis-pipeline.md  03-api-frontend.md  04-phases.md  05-repo-structure.md  GUIDE.md  IMPLEMENTATION_STEP.md
.astera/: index.db
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/astera-index/: action.yml
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-27T15-26-28Z__apps-web-src.md
_archive/apps/cli/: CMakeLists.txt
_archive/cmake/: CompilerWarnings.cmake  FetchGrammars.cmake
_archive/include/astera/core/: config.h
_archive/include/astera/parser/: extractor.h
_archive/include/astera/storage/: database.h
_archive/src/: CMakeLists.txt
_archive/src/core/: config.cpp
_archive/src/discovery/: classifier.cpp  walker.cpp
_archive/src/parser/: extractor.cpp  parser.cpp
_archive/src/storage/: database.cpp
_archive/tests/fixtures/: sample.py  sample.rs  sample.ts
apps/cli/: main.cpp
apps/web/: DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  api.ts  constants.ts  index.css  main.tsx  store.ts  types.ts
apps/web/src/components/: Graph3D.tsx  Layout.tsx
apps/web/src/components/AI/: AILayer.tsx
apps/web/src/components/CommandPalette/: CommandPalette.tsx
apps/web/src/components/Common/: ContextMenu.tsx  EmptyState.tsx  Icons.tsx  KeyboardShortcuts.tsx
apps/web/src/components/Graph/: EdgeInstances.tsx  GraphCanvas.tsx  GraphScene.tsx  MiniMap.tsx  NodeInstances.tsx  NodeLabels.tsx  ParticleField.tsx  TemporalAnimation.tsx
apps/web/src/components/Overlay/: OverlayPanel.tsx
apps/web/src/components/Plugins/: PluginRegistry.tsx
apps/web/src/components/Sidebar/: Sidebar.tsx  TreeView.tsx
apps/web/src/components/Telemetry/: PerformanceOverlay.tsx
apps/web/src/hooks/: useForceLayout.ts  useForceLayout2D.ts  useKeyboard.ts  useLOD.ts  useLiveUpdates.ts  usePerformanceBudget.ts
apps/web/src/pages/: FilesPage.tsx  GraphPage.tsx  ImpactPage.tsx  LandingPage.tsx  MetricsPage.tsx  SymbolsPage.tsx
apps/web/src/pages/panels/: BrokenRefsPanel.tsx  FilesPanel.tsx  ImpactPanel.tsx  MetricsPanel.tsx  SettingsPanel.tsx  SymbolsPanel.tsx
apps/web/src/workers/: forceLayout.worker.ts
cmake/: FetchGrammars.cmake  Sanitizers.cmake
crates/astera/: Cargo.toml
crates/astera-api/: Cargo.toml  build.rs
crates/astera-api/src/: integration_test.rs  lib.rs  routes.rs  ws.rs
crates/astera-cli/: Cargo.toml
crates/astera-cli/src/: main.rs
crates/astera-core/: Cargo.toml
crates/astera-core/.astera/: index.db
crates/astera-core/src/: lib.rs
crates/astera-discovery/: Cargo.toml
crates/astera-discovery/src/: lib.rs
crates/astera-export/: Cargo.toml
crates/astera-export/src/: git_analysis.rs  lib.rs
crates/astera-impact/: Cargo.toml
crates/astera-impact/src/: lib.rs
crates/astera-metrics/: Cargo.toml
crates/astera-metrics/src/: lib.rs
crates/astera-parser/: Cargo.toml
crates/astera-parser/src/: lib.rs
crates/astera-plugins/: Cargo.toml
crates/astera-plugins/src/: lib.rs
crates/astera-resolver/: Cargo.toml
crates/astera-resolver/src/: lib.rs
crates/astera-storage/: Cargo.toml
crates/astera-storage/src/: lib.rs
crates/astera-watcher/: Cargo.toml
crates/astera-watcher/src/: lib.rs
crates/astera/benches/: astera_bench.rs
crates/astera/src/: benchmarks.rs  main.rs
docs/: benchmarks-data.json  benchmarks-table.md
docs/superpowers/specs/: 2026-06-27-frontend-redesign.md
hooks/: pre-commit
include/astera/core/: config.h  error.h  export.h  types.h
include/astera/discovery/: classifier.h  walker.h
include/astera/parser/: extractor.h  parser.h
include/astera/storage/: database.h
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
src/: CMakeLists.txt
src/core/: error.cpp  types.cpp
src/discovery/: walker.cpp
src/parser/: extractor.cpp  parser.cpp
src/storage/: database.cpp
tests/: CMakeLists.txt  test_discovery.cpp  test_parser.cpp  test_storage.cpp  test_types.cpp
tests/fixtures/: import_only.ts
