[workspace]
resolver = "2"
members = [
    "crates/astera-core",
    "crates/astera-discovery",
    "crates/astera-parser",
    "crates/astera-storage",
    "crates/astera-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
anyhow = "1"
