[workspace]
resolver = "2"
members = [
  "crates/astera-core",
  "crates/astera-discovery",
  "crates/astera-parser",
  "crates/astera-resolver",
  "crates/astera-storage",
  "crates/astera-metrics",
  "crates/astera-impact",
  "crates/astera-watcher",
  "crates/astera-api",
  "crates/astera-export",
  "crates/astera-plugins",
  "crates/astera",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aditya8281/astera"
description = "Local-first static analysis engine with CLI + REST API + interactive 3D web UI"
authors = ["Aditya Rathod"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
