[package]
name = "astera-api"
version = "0.1.0"
edition = "2021"

[dependencies]
astera-core = { path = "../astera-core" }
astera-storage = { path = "../astera-storage" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
http = "1"
http-body-util = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
