[package]
name = "astera-api"
version = "0.1.0"
edition = "2021"

[dependencies]
astera-core = { path = "../astera-core" }
astera-storage = { path = "../astera-storage" }
astera-metrics = { path = "../astera-metrics" }
astera-impact = { path = "../astera-impact" }
axum = { version = "0.8", features = ["ws"] }
axum-core = "0.5"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = "0.5"
http = "1"
http-body-util = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
mime_guess = "2"
rust-embed = { version = "8", features = ["mime-guess"] }
