[package]
name = "astera-export"
version = "0.1.0"
edition = "2021"

[dependencies]
astera-core = { path = "../astera-core" }
astera-storage = { path = "../astera-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
