[package]
name = "astera-plugins"
version = "0.1.0"
edition = "2021"
description = "Plugin system for Astera static analysis engine"

[dependencies]
astera-core = { path = "../astera-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
libloading = "0.8"
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]
