[package]
name = "astera-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
astera-core = { path = "../astera-core" }
astera-discovery = { path = "../astera-discovery" }
astera-parser = { path = "../astera-parser" }
astera-storage = { path = "../astera-storage" }
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["sync", "time", "rt"] }
rayon = "1"
tracing.workspace = true
anyhow.workspace = true
