[package]
name = "astera"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "astera"
path = "src/main.rs"

[dependencies]
astera-core = { path = "../astera-core" }
astera-discovery = { path = "../astera-discovery" }
astera-parser = { path = "../astera-parser" }
astera-storage = { path = "../astera-storage" }
astera-export = { path = "../astera-export" }
astera-watcher = { path = "../astera-watcher" }
astera-api = { path = "../astera-api" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
