[package]
name = "astera"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "astera"
path = "src/main.rs"

[[bench]]
name = "astera_bench"
harness = false

[dependencies]
astera-core = { path = "../astera-core" }
astera-discovery = { path = "../astera-discovery" }
astera-parser = { path = "../astera-parser" }
astera-storage = { path = "../astera-storage" }
astera-export = { path = "../astera-export" }
astera-watcher = { path = "../astera-watcher" }
astera-api = { path = "../astera-api" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = { workspace = true }
astera-core = { path = "../astera-core" }
astera-parser = { path = "../astera-parser" }
astera-storage = { path = "../astera-storage" }
